[gd_scene load_steps=2 format=2]

[ext_resource path="res://utils/item_spawner.gd" type="Script" id=1]

[node name="ItemSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="TimerSpike" type="Timer" parent="."]

[node name="TimerOrb" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="timeout" from="TimerSpike" to="." method="_on_TimerSpike_timeout"]
[connection signal="timeout" from="TimerOrb" to="." method="_on_TimerGem_timeout"]
